k8s/bookie.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bookie
  name: bookie
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bookie
  strategy: {}
  template:
    metadata:
      labels:
        app: bookie
    spec:
      containers:
      - image: shrey27tri01/bookie:v0
        name: bookie
        resources: {}
        ports:
          - containerPort: 8000
        volumeMounts:
          - mountPath: /var/log/
            name: bookie
        command: ["/bin/sh", "-c", "echo \"127.0.0.1 db-service\" >> /etc/hosts && gunicorn bookie.wsgi --bind 0.0.0.0:8000"]
        args:
          - apt-get update;
            apt-get -y install vim;
            python manage.py makemigrations;
            python manage.py migrate;
            gunicorn --bind 0.0.0.0:8000 --workers 3 bookie.wsgi:application
      volumes:
        - name: bookie
          hostPath:
            path: /var/log/
status: {}
