k8s/ui.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: ui
  name: ui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ui
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: ui
    spec:
      containers:
      - image: shrey27tri01/bookie_ui:v0
        name: bookie-ui-5qj5f
        resources: {}
        ports:
          - containerPort: 3000
        volumeMounts:
          - mountPath: /var/log/
            name: ui
        command: ["npm", "start"]
        
      volumes:
        - name: ui
          hostPath:
            path: /var/log/
status: {}
