k8s/ui-service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: ui
  name: ui-service
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: ui
status:
  loadBalancer: {}
